Make getting archetype meshes easier